Implement event delegation to handle dynamically added products

--- a/index.html
+++ b/index.html
@@ -20,6 +20,20 @@
         <button id="purchase-button">Purchase</button>
     </div>
 
+    <div class="add-product">
+        <h3>Add New Product</h3>
+        <input type="text" id="new-product-name" placeholder="Product Name">
+        <input type="number" id="new-product-price" placeholder="Product Price">
+        <select id="new-product-size">
+            <option value="small">Small</option>
+            <option value="medium">Medium</option>
+            <option value="large">Large</option>
+        </select>
+        <button id="add-product-button">Add Product</button>
+    </div>
+
+    <div id="product-list"></div>
+
     <script src="main.js"></script>
 </body>
 </html>
